# bitbang-python

./: .gitignore  README.md  architecture.md  bitbang-browser-architecture.md  bitbang-cookie-spec.md  bitbang-identity-spec.md  bitbang.txt  bitbangproxy.md  cookie-spec.md  octoprint-bitbang-plugin-plan.md  open_iot_network_pitch.docx  pyproject.toml  run_tests.sh  version.sh
.github/workflows/: publish.yml  tests.yml
bitbang/: __init__.py  __main__.py  adapter.py  identity.py  proxy.py
bitbang/apps/fileshare/: app.py  core.py
bitbang/apps/fileshare/templates/: browse.html  send.html
bitbang/apps/webcam/: app.py  index.html  webcam_adapter.py
bitbang/examples/simple_fastapi/: app.py  index.html
bitbang/examples/simple_flask/: app.py  app_concurrent.py  app_cookies.py  app_cookies_bitbang.py  app_local.py  app_pin.py  app_pin_callback.py  app_upload.py  app_websocket.py  index.html
bitbang/examples/sse_example/: app.py  app_local.py  index.html
tests/: conftest.py  test_app.py  test_app_runner.py  test_cookies.py  test_file_transfer.py  test_page_load.py  test_pin.py  test_pin_app_runner.py  test_post.py  test_reconnect.py  test_sse.py  test_websocket.py  test_ws_app.py  test_ws_app_runner.py
