[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbang"
version = "0.1.49"
description = "Connect browsers to devices via WebRTC"
readme = "README.md"
license = "MIT"
authors = [{name = "Rich LeGrand"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiortc",
    "websockets",
    "flask",
    "cryptography>=3.4",
    "qrcode>=7.0",
]

[project.scripts]
bitbang-fileshare = "bitbang.apps.fileshare.app:main"
bitbang-webcam = "bitbang.apps.webcam.app:main"

[project.optional-dependencies]
fastapi = ["fastapi", "uvicorn"]

[project.urls]
Homepage = "https://github.com/richlegrand/bitbang-python"
Source = "https://github.com/richlegrand/bitbang-python"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bitbang*"]
exclude = ["bitbang.examples*"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "*.html", "*.pem", "static/*.png", "static/*.ico"]
